--- a/coffe-shop-app/src/App.scss
+++ b/coffe-shop-app/src/App.scss
@@ -1,6 +1,6 @@
 @import "bootstrap";
 body {
-  background-color: #00704A;
+  background-color: #00704a;
 }
 
 .navbar {
@@ -20,7 +20,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  color:#fff;
+  color: #fff;
   h1 {
     font-weight: 700;
     font-size: 4em;
@@ -28,6 +28,13 @@ body {
   }
 }
 
-.card{
-  cursor:pointer;
+.card {
+  cursor: pointer;
+  border-radius: 0;
+  width:17rem;
+  height:25rem;
+  transition: all 0.5s;
+  &:hover {
+    transform:scale(0.9);
+  }
 }
