--- a/coffe-shop-app/src/App.scss
+++ b/coffe-shop-app/src/App.scss
@@ -2,6 +2,17 @@
 body {
   background-color: #00704a;
 }
+table {
+  svg {
+    color: #fff;
+  }
+}
+table .MuiFormControl-root {
+  input,
+  label {
+    color: #fff;
+  }
+}
 
 .navbar {
   a {
@@ -31,18 +42,17 @@ body {
 .card {
   cursor: pointer;
   border-radius: 0;
-  width:17rem;
-  height:25rem;
+  height: 25rem;
   transition: all 0.5s;
   &:hover {
-    transform:scale(0.9);
+    transform: scale(0.9);
   }
 }
 
-#demo-simple-select-helper{
-  color:#fff;
+#demo-simple-select-helper {
+  color: #fff;
 }
 
-#th-status{
-  cursor:pointer;
+#th-status {
+  cursor: pointer;
 }
